// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering an org file <OrgFile /> renders an org file 1`] = `
<div>
  <div
    tabindex="-1"
  >
    <div
      class="org-file-container"
      tabindex="-1"
    >
      <div
        class="header-list-container"
      >
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  Top level header
                </span>
                ...
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  Another top level header
                </span>
                ...
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A header with tags                                              
                </span>
                
              </span>
              <div>
                <div
                  class="header-tag"
                >
                  tag1
                </div>
                <div
                  class="header-tag"
                >
                  tag2
                </div>
              </div>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A header with 
                  <a
                    href="https://google.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    a link
                  </a>
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
      </div>
      <div
        class="action-drawer-container nice-scroll"
      >
        <button
          class="btn btn--circle action-drawer__btn fas fa-lg fa-cloud action-drawer__btn--with-sub-icon"
          style="opacity: 1;"
          title="Sync changes"
        >
          <i
            class="fas fa-xs fa-sync-alt action-drawer__btn__sub-icon"
          />
        </button>
        <div
          class="action-drawer__arrow-buttons-container"
          style="left: 0px;"
        >
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-up"
            style="opacity: 1; box-shadow: none; bottom: 0px;"
            title="Move header up"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-down"
            style="opacity: 1; box-shadow: none; bottom: 0px;"
            title="Move header down"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-left"
            style="opacity: 1; box-shadow: none; bottom: 0px; right: 0px;"
            title="Move header left"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-right"
            style="opacity: 1; box-shadow: none; bottom: 0px; left: 0px;"
            title="Move header right"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-chevron-left"
            style="opacity: 1; box-shadow: none; bottom: 0px; right: 0px;"
            title="Move entire subtree left"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-chevron-right"
            style="opacity: 1; box-shadow: none; bottom: 0px; left: 0px;"
            title="Move entire subtree right"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__main-arrow-button fas fa-lg fa-arrows-alt"
            style="opacity: 1;"
            title="Show movement buttons"
          />
        </div>
        <button
          class="btn btn--circle action-drawer__btn fas fa-lg fa-calendar-alt"
          style="opacity: 1;"
          title="Show agenda"
        />
        <div
          class="action-drawer__capture-buttons-container"
        >
          <button
            class="btn btn--circle action-drawer__btn fas fa-lg fa-list-ul"
            style="opacity: 1; position: relative; z-index: 1;"
            title="Show capture templates"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Rendering an org file Can advance todo state for selected header in an org file 1`] = `
<div>
  <div
    tabindex="-1"
  >
    <div
      class="org-file-container"
      tabindex="-1"
    >
      <div
        class="header-list-container"
      >
        <div
          class="header header--selected"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  Top level header
                </span>
                
              </span>
            </div>
          </div>
          <div
            class="ReactCollapse--collapse"
            style="overflow: hidden; height: 0px; margin-right: 0px;"
          >
            <div
              class="ReactCollapse--content"
            >
              <div
                class="header-action-drawer-container"
              >
                <div
                  class="header-action-drawer__row"
                >
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-pencil-alt fa-lg"
                    />
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-edit fa-lg"
                    />
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-tags fa-lg"
                    />
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-compress fa-lg"
                    />
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-plus fa-lg"
                    />
                  </div>
                </div>
                <div
                  class="header-action-drawer__row"
                >
                  <div
                    class="header-action-drawer__deadline-scheduled-button"
                  >
                    Deadline
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__deadline-scheduled-button"
                  >
                    Scheduled
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="header-content-container nice-scroll"
            style="width: 0px;"
          >
            <span />
          </div>
        </div>
        <div
          class="header"
          style="padding-left: 40px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A nested header
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 40px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            <span
              class="todo-keyword todo-keyword--todo"
            >
              TODO
            </span>
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A todo item
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 40px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            <span
              class="todo-keyword todo-keyword--done"
            >
              DONE
            </span>
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A finished todo item
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  Another top level header
                </span>
                ...
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A header with tags                                              
                </span>
                
              </span>
              <div>
                <div
                  class="header-tag"
                >
                  tag1
                </div>
                <div
                  class="header-tag"
                >
                  tag2
                </div>
              </div>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A header with 
                  <a
                    href="https://google.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    a link
                  </a>
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
      </div>
      <div
        class="action-drawer-container nice-scroll"
      >
        <button
          class="btn btn--circle action-drawer__btn fas fa-lg fa-cloud action-drawer__btn--with-sub-icon"
          style="opacity: 1;"
          title="Sync changes"
        >
          <i
            class="fas fa-xs fa-sync-alt action-drawer__btn__sub-icon"
          />
        </button>
        <div
          class="action-drawer__arrow-buttons-container"
          style="left: 0px;"
        >
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-up"
            style="opacity: 1; box-shadow: none; bottom: 0px;"
            title="Move header up"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-down"
            style="opacity: 1; box-shadow: none; bottom: 0px;"
            title="Move header down"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-left"
            style="opacity: 1; box-shadow: none; bottom: 0px; right: 0px;"
            title="Move header left"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-right"
            style="opacity: 1; box-shadow: none; bottom: 0px; left: 0px;"
            title="Move header right"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-chevron-left"
            style="opacity: 1; box-shadow: none; bottom: 0px; right: 0px;"
            title="Move entire subtree left"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-chevron-right"
            style="opacity: 1; box-shadow: none; bottom: 0px; left: 0px;"
            title="Move entire subtree right"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__main-arrow-button fas fa-lg fa-arrows-alt"
            style="opacity: 1;"
            title="Show movement buttons"
          />
        </div>
        <button
          class="btn btn--circle action-drawer__btn fas fa-lg fa-calendar-alt"
          style="opacity: 1;"
          title="Show agenda"
        />
        <div
          class="action-drawer__capture-buttons-container"
        >
          <button
            class="btn btn--circle action-drawer__btn fas fa-lg fa-list-ul"
            style="opacity: 1; position: relative; z-index: 1;"
            title="Show capture templates"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Rendering an org file Can select a header in an org file 1`] = `
<div>
  <div
    tabindex="-1"
  >
    <div
      class="org-file-container"
      tabindex="-1"
    >
      <div
        class="header-list-container"
      >
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  Top level header
                </span>
                ...
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  Another top level header
                </span>
                ...
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A header with tags                                              
                </span>
                
              </span>
              <div>
                <div
                  class="header-tag"
                >
                  tag1
                </div>
                <div
                  class="header-tag"
                >
                  tag2
                </div>
              </div>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A header with 
                  <a
                    href="https://google.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    a link
                  </a>
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
      </div>
      <div
        class="action-drawer-container nice-scroll"
      >
        <button
          class="btn btn--circle action-drawer__btn fas fa-lg fa-cloud action-drawer__btn--with-sub-icon"
          style="opacity: 1;"
          title="Sync changes"
        >
          <i
            class="fas fa-xs fa-sync-alt action-drawer__btn__sub-icon"
          />
        </button>
        <div
          class="action-drawer__arrow-buttons-container"
          style="left: 0px;"
        >
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-up"
            style="opacity: 1; box-shadow: none; bottom: 0px;"
            title="Move header up"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-down"
            style="opacity: 1; box-shadow: none; bottom: 0px;"
            title="Move header down"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-left"
            style="opacity: 1; box-shadow: none; bottom: 0px; right: 0px;"
            title="Move header left"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-right"
            style="opacity: 1; box-shadow: none; bottom: 0px; left: 0px;"
            title="Move header right"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-chevron-left"
            style="opacity: 1; box-shadow: none; bottom: 0px; right: 0px;"
            title="Move entire subtree left"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-chevron-right"
            style="opacity: 1; box-shadow: none; bottom: 0px; left: 0px;"
            title="Move entire subtree right"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__main-arrow-button fas fa-lg fa-arrows-alt"
            style="opacity: 1;"
            title="Show movement buttons"
          />
        </div>
        <button
          class="btn btn--circle action-drawer__btn fas fa-lg fa-calendar-alt"
          style="opacity: 1;"
          title="Show agenda"
        />
        <div
          class="action-drawer__capture-buttons-container"
        >
          <button
            class="btn btn--circle action-drawer__btn fas fa-lg fa-list-ul"
            style="opacity: 1; position: relative; z-index: 1;"
            title="Show capture templates"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Rendering an org file Can select a header in an org file 2`] = `
<div>
  <div
    tabindex="-1"
  >
    <div
      class="org-file-container"
      tabindex="-1"
    >
      <div
        class="header-list-container"
      >
        <div
          class="header header--selected"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  Top level header
                </span>
                
              </span>
            </div>
          </div>
          <div
            class="ReactCollapse--collapse"
            style="overflow: hidden; height: 0px; margin-right: 0px;"
          >
            <div
              class="ReactCollapse--content"
            >
              <div
                class="header-action-drawer-container"
              >
                <div
                  class="header-action-drawer__row"
                >
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-pencil-alt fa-lg"
                    />
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-edit fa-lg"
                    />
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-tags fa-lg"
                    />
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-compress fa-lg"
                    />
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__ff-click-catcher-container"
                  >
                    <div
                      class="header-action-drawer__ff-click-catcher"
                    />
                    <i
                      class="fas fa-plus fa-lg"
                    />
                  </div>
                </div>
                <div
                  class="header-action-drawer__row"
                >
                  <div
                    class="header-action-drawer__deadline-scheduled-button"
                  >
                    Deadline
                  </div>
                  <span
                    class="header-action-drawer__separator"
                  />
                  <div
                    class="header-action-drawer__deadline-scheduled-button"
                  >
                    Scheduled
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="header-content-container nice-scroll"
            style="width: 0px;"
          >
            <span />
          </div>
        </div>
        <div
          class="header"
          style="padding-left: 40px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A nested header
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 40px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            <span
              class="todo-keyword todo-keyword--todo"
            >
              TODO
            </span>
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A todo item
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 40px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            <span
              class="todo-keyword todo-keyword--done"
            >
              DONE
            </span>
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A finished todo item
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  Another top level header
                </span>
                ...
              </span>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A header with tags                                              
                </span>
                
              </span>
              <div>
                <div
                  class="header-tag"
                >
                  tag1
                </div>
                <div
                  class="header-tag"
                >
                  tag2
                </div>
              </div>
            </div>
          </div>
          <div />
        </div>
        <div
          class="header"
          style="padding-left: 20px; margin-left: 0px;"
        >
          <div
            class="left-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-check swipe-action-container__icon swipe-action-container__icon--left"
              style="display: none;"
            />
          </div>
          <div
            class="right-swipe-action-container"
            style="width: 0px; background-color: rgb(211, 211, 211);"
          >
            <i
              class="fas fa-times swipe-action-container__icon swipe-action-container__icon--right"
              style="display: none;"
            />
          </div>
          <div
            class="header__bullet"
            style="margin-left: -16px;"
          >
            *
          </div>
          <div
            class="title-line"
            style="width: 0px;"
          >
            
            <div>
              <span
                style="word-break: break-word;"
              >
                <span>
                  A header with 
                  <a
                    href="https://google.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    a link
                  </a>
                </span>
                
              </span>
            </div>
          </div>
          <div />
        </div>
      </div>
      <div
        class="action-drawer-container nice-scroll"
      >
        <button
          class="btn btn--circle action-drawer__btn fas fa-lg fa-cloud action-drawer__btn--with-sub-icon"
          style="opacity: 1;"
          title="Sync changes"
        >
          <i
            class="fas fa-xs fa-sync-alt action-drawer__btn__sub-icon"
          />
        </button>
        <div
          class="action-drawer__arrow-buttons-container"
          style="left: 0px;"
        >
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-up"
            style="opacity: 1; box-shadow: none; bottom: 0px;"
            title="Move header up"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-down"
            style="opacity: 1; box-shadow: none; bottom: 0px;"
            title="Move header down"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-left"
            style="opacity: 1; box-shadow: none; bottom: 0px; right: 0px;"
            title="Move header left"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-arrow-right"
            style="opacity: 1; box-shadow: none; bottom: 0px; left: 0px;"
            title="Move header right"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-chevron-left"
            style="opacity: 1; box-shadow: none; bottom: 0px; right: 0px;"
            title="Move entire subtree left"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__arrow-button fas fa-lg fa-chevron-right"
            style="opacity: 1; box-shadow: none; bottom: 0px; left: 0px;"
            title="Move entire subtree right"
          />
          <button
            class="btn btn--circle action-drawer__btn action-drawer__main-arrow-button fas fa-lg fa-arrows-alt"
            style="opacity: 1;"
            title="Show movement buttons"
          />
        </div>
        <button
          class="btn btn--circle action-drawer__btn fas fa-lg fa-calendar-alt"
          style="opacity: 1;"
          title="Show agenda"
        />
        <div
          class="action-drawer__capture-buttons-container"
        >
          <button
            class="btn btn--circle action-drawer__btn fas fa-lg fa-list-ul"
            style="opacity: 1; position: relative; z-index: 1;"
            title="Show capture templates"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
